# testrover

rover_core/include/: robot_core.hpp
rover_core/msg/: JointInformation.msg
rover_core/src/: robot_core.cpp
rover_hw/: CMakeLists.txt  package.xml
rover_hw/include/rover_hw/: abstract_robot.hpp  robot_joint_interface.hpp  robot_parameters.hpp  rover_hw.hpp
rover_hw/src/: abstract_robot.cpp  robot_joint_interface.cpp
rover_robots/: CMakeLists.txt  package.xml
rover_robots/config/: urdf.rviz
rover_robots/gears_smp/urdf/: gears_smp.urdf.xacro
rover_robots/launch/: control.launch  description.launch  master.launch  robot_vis.launch  teleop.launch  urdf_vis.launch  xacro_vis.launch
rover_robots/testrover/controls/: control.yaml
rover_robots/testrover/urdf/: testrover.urdf.xacro
rover_robots/urdf/: gears_smp.urdf.xacro
rover_robots/urdf/macros/accessories/: imu.urdf.xacro
rover_robots/urdf/macros/components/: rocker.urdf.xacro  wheel.urdf.xacro
testrover_control/: CMakeLists.txt  package.xml
testrover_control/config/: control.yaml
testrover_control/launch/: control.launch
testrover_description/: CMakeLists.txt  package.xml
testrover_description/config/: urdf.rviz
testrover_description/launch/: description.launch  robot_vis.launch  urdf_vis.launch  xacro_vis.launch
testrover_description/urdf/: gears_smp.urdf.xacro  testrover.urdf.xacro
testrover_description/urdf/macros/accessories/: kinect.urdf.xacro
testrover_description/urdf/macros/components/: rocker.urdf.xacro  wheel.urdf.xacro
testrover_gazebo/: CMakeLists.txt  package.xml
testrover_gazebo/launch/: robot_debug.launch  robot_world.launch  spawn_robot.launch
testrover_gazebo/src/: diff_suspension_plugin.cpp
testrover_gazebo/worlds/: generated_world.world
