<?xml version="1.0"?>
<package format="2">
  <name>rover_hw</name>
  <version>0.0.0</version>
  <description>Contains joint definitions and libraries for "building" robots for command interfaces</description>


  <maintainer email="joshuaphilipmartin@gmail.com">josh</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>

  </export>
</package>
