<?xml version="1.0"?>
<package format="2">
  <name>testrover_control</name>
  <version>0.0.0</version>
  <description>Manages controllers of robot</description>


  <maintainer email="joshuaphilipmartin@gmail.com">josh</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>

  </export>
</package>
