<?xml version="1.0"?>
<package format="2">
  <name>testrover_gazebo</name>
  <version>0.0.0</version>
  <description>Package for storing (and simply visualizing) URDF and Xacro files</description>


  <maintainer email="joshuaphilipmartin@gmail.com">josh</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
